--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ matplotlib==3.6.1
 numpy==1.23.4
 torch==1.14.0.dev20221031
 torchvision==0.15.0.dev20221031
+opencv-python==4.6.0.66
+scikit-image==0.19.2
+tqdm==4.64.1
